--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,6 +1,18 @@
-steps:
-- uses: actions/checkout@master
-- uses: codecov/codecov-action@v3
-  with:
-    verbose: true # optional (default = false)
+name: CodeCov
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - uses: codecov/codecov-action@v3
+      with:
+        verbose: true # optional (default = false)
   
