--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -12,7 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: codecov/codecov-action@v3
+    - uses: actions/setup-go@v2
       with:
-        verbose: true # optional (default = false)
-  
+        go-version: '1.19.2'
+    - name: Run coverage
+      run: make test
+    - name: Codecov
+      uses: codecov/codecov-action@v3.1.0
+      with:
+          files: ./coverage.out
+          name: codecov
+          fail_ci_if_error: true
+          verbose: true
