--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# generated file
+*.pb.go
+*.grpc.go
+*.pb.swift
+*.grpc.swift
+
+# macOS
+.DS_Store
+
+# Xcode
+*.xcodeproj
