--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,22 +5,32 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: 1.19
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.20
 
-    - name: Go test
-      run: |
-        make test
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+
+      - name: Installing protobuf dependencies
+        run: |
+          make install-dependencies
+
+      - name: Generating protos
+        run: |
+          make build-protos
+
+      - name: Go test
+        run: |
+          make test
