--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,12 +13,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.20
+          go-version: 1.20.1
+
+      - uses: actions/checkout@v3
 
       - name: Install Protoc
         uses: arduino/setup-protoc@v1
