--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,18 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.20.1
+      - uses: actions/checkout@v3
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+      - name: Installing protobuf dependencies
+        run: |
+          make install-dependencies
+      - name: Generating protos
+        run: |
+          make build-protos
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Set up QEMU
