--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,20 +16,15 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: 1.20.1
-
       - uses: actions/checkout@v3
-
       - name: Install Protoc
         uses: arduino/setup-protoc@v1
-
       - name: Installing protobuf dependencies
         run: |
           make install-dependencies
-
       - name: Generating protos
         run: |
-          make build-protos
-
+          make build-protos-go
       - name: Go test
         run: |
           make test
