--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: dockerfiles/dockerfile.api
-          push: true
-          platforms: linux/amd64
-          tags: ${{ env.DOCKER_REGISTRY }}/serviceapi:nightly
+        run: |
+          make build-image-api
+          docker push swr.cn-north-4.myhuaweicloud.com/oldgeneral/serviceapi:nightly
