--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,8 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Build and push Docker image
         run: |
+          pwd
+          ls
+          tree
           make build-image-api
           docker push swr.cn-north-4.myhuaweicloud.com/oldgeneral/serviceapi:nightly
