--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,6 @@ jobs:
       - name: Generating protos
         run: |
           make build-protos-go
-      - name: Go test
-        run: |
-          make test
 
       - name: Checkout code
         uses: actions/checkout@v2
@@ -37,6 +34,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
       - name: Build and push Docker image
         run: |
+          make build-protos-go
           pwd
           ls
           tree
