--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,6 @@ jobs:
       - name: Installing protobuf dependencies
         run: |
           make install-dependencies
-      - name: Generating protos
-        run: |
-          make build-protos-go
 
       - name: Checkout code
         uses: actions/checkout@v2
@@ -32,11 +29,14 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Login to Docker registry
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERUSERNAME }}
+          password: ${{ secrets.DOCKERPASSWORD }}
+          registry: ${{ env.DOCKER_REGISTRY }}
       - name: Build and push Docker image
         run: |
           make build-protos-go
-          pwd
-          ls
-          tree
           make build-image-api
-          docker push swr.cn-north-4.myhuaweicloud.com/oldgeneral/serviceapi:nightly
+          docker push ${{ env.DOCKER_REGISTRY }}/serviceapi:nightly
