--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,10 @@ jobs:
           make build-image-api
           docker tag serviceapi:nightly ${{ env.DOCKER_REGISTRY }}/serviceapi:${{ github.run_id }}
           docker push ${{ env.DOCKER_REGISTRY }}/serviceapi:${{ github.run_id }}
+      - name: Patch ServiceAPI Image tag
+        # You may pin to the exact commit or the version.
+        # uses: steebchen/kubectl@7c4c70d551952e40881998b840e16d4d9824a54f
+        uses: steebchen/kubectl@v2.1.1
+        with:
+          config: ${{ secret.KUBECONFIG }}
+          command: set image deployment -n oldgeneral serviceapi serviceapi=swr.cn-north-4.myhuaweicloud.com/oldgeneral/serviceapi:${{ github.run_id }}
