ignore pr run github action with docs and so on

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,6 +7,10 @@ on:
   push:
     branches: ["main"]
   pull_request:
+    paths-ignore:
+      - "deployment/**"
+      - "docs/**"
+      - "README.md"
     branches: ["main"]
 
 jobs:
