--- a/deployment/serviceapi/deployment.yaml
+++ b/deployment/serviceapi/deployment.yaml
@@ -18,6 +18,25 @@ spec:
           resources:
           ports:
             - containerPort: 30001
+          env:
+            - name: DB_USER
+              value: caocao
+            - name: DB_ADDRESS
+              value: mysql.database.svc.cluster.local
+            - name: DB_PORT
+              value: "3306"
+            - name: DB_NAME
+              value: oldgeneral
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: database-secret
+                  key: user_password
+            - name: JWT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: password
 ---
 apiVersion: v1
 kind: Service
