--- a/deployment/serviceapi/deployment.yaml
+++ b/deployment/serviceapi/deployment.yaml
@@ -36,7 +36,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: jwt-secret
-                  key: password
+                  key: secret
 ---
 apiVersion: v1
 kind: Service
