--- a/deployment/oldgeneral/serviceapi/deployment.yaml
+++ b/deployment/oldgeneral/serviceapi/deployment.yaml
@@ -19,6 +19,8 @@ spec:
           ports:
             - containerPort: 30001
           env:
+            - name: ListenPort
+              value: ":30001"
             - name: DB_USER
               value: caocao
             - name: DB_ADDRESS
