--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,10 +46,12 @@ jobs:
           docker tag serviceiam:nightly ${{ env.DOCKER_REGISTRY }}/serviceiam:${{ github.run_id }}
           docker tag serviceuser:nightly ${{ env.DOCKER_REGISTRY }}/serviceuser:${{ github.run_id }}
           docker tag serviceflags:nightly ${{ env.DOCKER_REGISTRY }}/serviceflags:${{ github.run_id }}
+          docker tag servicewallet:nightly ${{ env.DOCKER_REGISTRY }}/servicewallet:${{ github.run_id }}
           docker push ${{ env.DOCKER_REGISTRY }}/serviceapi:${{ github.run_id }}
           docker push ${{ env.DOCKER_REGISTRY }}/serviceiam:${{ github.run_id }}
           docker push ${{ env.DOCKER_REGISTRY }}/serviceuser:${{ github.run_id }}
           docker push ${{ env.DOCKER_REGISTRY }}/serviceflags:${{ github.run_id }}
+          docker push ${{ env.DOCKER_REGISTRY }}/servicewallet:${{ github.run_id }}
 
       - name: Patch ServiceAPI Image tag
         uses: steebchen/kubectl@v2.1.1
@@ -74,3 +76,9 @@ jobs:
         with:
           config: ${{ secrets.KUBECONFIG }}
           command: set image deployment -n oldgeneral serviceflags serviceflags=${{ env.DOCKER_REGISTRY }}/serviceflags:${{ github.run_id }}
+
+      - name: Patch ServiceWallet Image tag
+        uses: steebchen/kubectl@v2.1.1
+        with:
+          config: ${{ secrets.KUBECONFIG }}
+          command: set image deployment -n oldgeneral servicewallet servicewallet=${{ env.DOCKER_REGISTRY }}/servicewallet:${{ github.run_id }}
