fix deployment and update userid from int64 to string

--- a/deployment/oldgeneral/servicevip/deployment.yaml
+++ b/deployment/oldgeneral/servicevip/deployment.yaml
@@ -21,7 +21,7 @@ spec:
           env:
             - name: ListenPort
               value: ":30001"
-            - name: DB_vip
+            - name: DB_USER
               value: caocao
             - name: DB_ADDRESS
               value: mysql.database.svc.cluster.local
